# haki_chain_Blockchain-Legal-Institute

./: .env.example  README.md  hardhat.config.cjs  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js
CONSTELLATION/: .gitignore
CONSTELLATION/src/: index.ts
DJANGO/: .gitignore  README.md  manage.py  requirements.txt
DJANGO/hakichain/: asgi.py  settings.py  urls.py  wsgi.py
ICP/: Cargo.toml  README.md  dfx.json
ICP/.dfx/local/: canister_ids.json  network-id
ICP/.dfx/local/canisters/icp_registry/: constructor.did  icp_registry.wasm  index.js  service.did.d.ts  service.did.js
ICP/src/: lib.rs
WEB3/: .gitignore  main.py
WEB3/services/: draft.py  lens.py  router.py
app/: layout.tsx
backend/: README.md
backend/constellation_server-main/: README.md  package-lock.json  package.json
backend/haki_agents_and_web3_layer-main/: README.md  requirements.txt
backend/services/: constellationService.ts  httpClient.ts  icpService.ts  index.ts  storyService.ts
cache/: solidity-files-cache.json
contracts/: BountyEscrow.sol  BountyRegistry.sol  HakiToken.sol
public/: robots.txt  site.webmanifest  sitemap.xml
scripts/: deploy.js
src/: App.tsx  index.css
src/abis/: StoryIPRegister.json
src/components/: AIChat.jsx  AiAssistantTab.jsx  ApiStatusTab.jsx  ApiTest.jsx  CaseChatModal.jsx  CaseDatabaseTab.jsx  CaseManagement.jsx  CaseSearch.jsx  DeepResearchTab.jsx  DonorContent.tsx  Footer.tsx  FullViewToggleButton.tsx  HakiBot.tsx  LawyerContent.tsx  LawyerSidebar.tsx  LegalMarkdownRenderer.tsx  (+5 more)
test/: hakiContracts.test.js
(+66 files in other folders)
