[package]
name = "icp_registry"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Internet Computer SDK
ic-cdk = "0.13.6"
ic-cdk-macros = "0.13.2"
candid = "0.10"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Hashing and encoding
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
hex = "0.4"

# Standard utilities
once_cell = "1.18"
